unpackaged/main/default/objects/cmbls__Expense_Amortization__c/cmbls__Expense_Amortization__c.object-meta.xml
<CustomObject>
    <label>Expense Amortization</label>
    <nameField>
        <displayFormat>AOE-{0000}</displayFormat>
        <label>Amortization of Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses Amortization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>