unpackaged/main/default/objects/cmbls__Expense_Amortization__c/fields/cmbls__Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Accrual_Date__c</fullName>
    <label>Accrual Date</label>
    <type>Date</type>
</CustomField>