unpackaged/main/default/objects/cmbls__Expense_Amortization__c/fields/cmbls__Origination_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Origination_Amount__c</fullName>
    <label>Origination Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>