unpackaged/main/default/objects/cmbls__Expense_Amortization__c/fields/RevShare_Amount__c.field-meta.xml
<CustomField>
    <fullName>RevShare_Amount__c</fullName>
    <label>RevShare Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>